--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <span class="num" onclick="document.calc.txt.value += '3'">3</span>
             <span class="num" onclick="document.calc.txt.value += '0'">0</span>
             <span class="num" onclick="document.calc.txt.value += '00'">00</span>
+            <span class="num" onclick="document.calc.txt.value += '.'">.</span>
+            <span class="num" onclick="document.calc.txt.value += '='">=</span>
         </form>
     </div>
     
