--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <form class="calculator" name="calc">
-            <input type="text" readonly class="value" name="text">
+            <input type="text" readonly class="value" name="txt"/>
             <span class="num" onclick="calc.txt.value = ''">c</span>
             <span class="num" onclick="document.calc.txt.value += '/'">/</span>
             <span class="num" onclick="document.calc.txt.value += '*'">*</span>
@@ -28,7 +28,7 @@
             <span class="num" onclick="document.calc.txt.value += '0'">0</span>
             <span class="num" onclick="document.calc.txt.value += '00'">00</span>
             <span class="num" onclick="document.calc.txt.value += '.'">.</span>
-            <span class="num" onclick="document.calc.txt.value += '='">=</span>
+            <span class="num" onclick="document.calc.txt.value = eval(calc.txt.value)">=</span>
         </form>
     </div>
     
